force-app/main/default/objects/DeliveryChallanPDF__mdt/DeliveryChallanPDF__mdt.object-meta.xml
<CustomObject>
    <label>DeliveryChallanPDF</label>
    <pluralLabel>DeliveryChallanPDFs</pluralLabel>
</CustomObject>