force-app/main/default/objects/DeliveryChallanPDF__mdt/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>