force-app/main/default/objects/DeliveryChallanPDF__mdt/fields/Factory_Address__c.field-meta.xml
<CustomField>
    <fullName>Factory_Address__c</fullName>
    <label>Factory Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>