force-app/main/default/objects/DeliveryChallanPDF__mdt/fields/Former_Address__c.field-meta.xml
<CustomField>
    <fullName>Former_Address__c</fullName>
    <label>Former Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>