force-app/main/default/objects/DeliveryChallanPDF__mdt/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>