force-app/main/default/objects/DeliveryChallanPDF__mdt/fields/PartA__c.field-meta.xml
<CustomField>
    <fullName>PartA__c</fullName>
    <label>PartA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>