force-app/main/default/objects/DeliveryChallanPDF__mdt/fields/Small_CName__c.field-meta.xml
<CustomField>
    <fullName>Small_CName__c</fullName>
    <label>Small CName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>